--- a/portfolio/src/Components/Book.css
+++ b/portfolio/src/Components/Book.css
@@ -77,6 +77,7 @@
     float: left;
     padding-right: 0;
     margin-right: 1rem;
+    margin-top: 1rem;
 }
 
 .book-img {
@@ -140,7 +141,7 @@
     }
 
     .book-summary {
-        font-size: .75rem;
+        font-size: .85rem;
         color: white;
         font-weight: 100;
         margin: 5% 5%;
